fix visibility

--- a/web_src/css/markup/codecopy.css
+++ b/web_src/css/markup/codecopy.css
@@ -17,7 +17,7 @@
   top: 8px;
   right: 6px;
   padding: 9px;
-  /*visibility: hidden;*/
+  visibility: hidden;
   animation: fadeout 0.2s both;
 }
 
